🎭😻 Checkpoint ./index.html:10732015/241

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   
 <head>
-  
-  
-  <h2>Maal</h>
-  
-<h3>
 
-  </h3>
+<h2>
+ Journi/ Urban Aillance Team Members
+  </h2>  
+  <table>
+    <tr></tr>
+  </table>
   
   
   
@@ -19,9 +19,7 @@
 <body>
   
   
-<p>
-  
-  </p>  
+
   
   
   
