💎🍭 Checkpoint ./index.html:10732015/300

--- a/index.html
+++ b/index.html
@@ -7,9 +7,23 @@
  Journi/ Urban Aillance Team Members
   </h2>  
   <table>
+    <tr>
+    <th>Malik</th>
+    <th>Wiliams</th>
+    </tr>
+  <table>
+  <tr>
+   <th>Safarie</th> 
+    <th>Johnson</th>
+    </tr>
+    </table>
+  <table>
+    <tr>
+    <th>Corde</th>
+    <th>Jenkines</th>
     
-  
-  
+    </tr>
+    </table>
   </table>
   
   
